--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "apollo-server-express": "^2.19.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
-    "type-graphql": "^1.1.1"
+    "pg": "^8.5.1",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
