--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.19.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "pg": "^8.5.1",
@@ -19,6 +20,7 @@
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
