--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "graphql": "^15.4.0",
     "pg": "^8.5.1",
     "type-graphql": "^1.1.1",
