--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "graphql": "^15.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.29"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.8",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
