--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.19.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
+    "class-transformer": "^0.3.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "graphql": "^15.4.0",
